--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@
     <string name="industrial_commercial_search_answer_11_3">Não recebi orientação, mas pratico economia de energia no meu dia a dia.</string>
     <string name="industrial_commercial_search_answer_11_4">Não recebi orientação e não pratico economia de energia no meu dia a dia.</string>
 
+    <!-- só pra commit-->
     <!-- <string name="rural_search_quest_99"></string> -->
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
